fix weird nav wrapping

--- a/themes/catppollo/sass/main.scss
+++ b/themes/catppollo/sass/main.scss
@@ -43,7 +43,7 @@ strong {
   }
 }
 
-@media all and (min-width: 720px) {
+@media all and (min-width: 725px) {
   html {
     font-size: 18px;
   }
